[package]
name = "gold-dust-gateway"
version = "0.2.0"
edition = "2021"
default-run = "gold-dust-gateway"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
tokio-socks = "0.5"
axum = "0.7"

[[bin]]
name = "dispatcher"
path = "src/bin/dispatcher.rs"
